スクロールイベント全ページ

--- a/contact/index.html
+++ b/contact/index.html
@@ -132,9 +132,9 @@
         <img class="inquiry-sp-img" src="../images/contact/sp/contact_girls_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
-        <p class="subtitle-top">塾の雰囲気を知りたい方</p>
+        <p class="subtitle-top effect-fade">塾の雰囲気を知りたい方</p>
         <div class="subtitle">
-          <h2>無料体験授業／見学</h2>
+          <h2 class="effect-fade">無料体験授業／見学</h2>
         </div>
         <p class="inquiry-text">お問い合わせいただいた方の９割が参<br class="not-new-line">加している人気の体験授業です。
           <br class="not-new-line">今なら１週間無料で実際の授業にご参<br class="not-new-line">加いただけます。
@@ -156,9 +156,9 @@
         <img class="inquiry-sp-img" src="../images/contact/sp/mother_and_daughter_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
-        <p class="subtitle-top">じっくり検討したい方</p>
+        <p class="subtitle-top effect-fade">じっくり検討したい方</p>
         <div class="subtitle">
-          <h2>資料請求</h2>
+          <h2 class="effect-fade">資料請求</h2>
         </div>
         <p class="inquiry-text">塾の詳しい資料を無料でお送りいたし<br class="not-new-line">ます。
           ご不明点やお悩みなどがござい<br class="not-new-line">ましたら、いつでもお気軽にお問い合<br class="not-new-line">わせください。
@@ -180,9 +180,9 @@
         <img class="inquiry-sp-img" src="../images/contact/sp/parent_and_child_sp.jpg" alt="">
       </div>
       <div class="inquiry-texts">
-        <p class="subtitle-top">中３講習会、全県テスト関連もこちら</p>
+        <p class="subtitle-top effect-fade">中３講習会、全県テスト関連もこちら</p>
         <div class="subtitle">
-          <h2>その他のお問い合わせ</h2>
+          <h2 class="effect-fade">その他のお問い合わせ</h2>
         </div>
         <p class="inquiry-text">その他のご質問、中３特別講習会（春<br class="not-new-line">期・夏期・冬期講習）や
           全県テストに<br class="not-new-line">関するお申し込み・ご相談もこちらか<br class="not-new-line">らお問い合わせください。
