--- a/elementary/index.html
+++ b/elementary/index.html
@@ -129,8 +129,8 @@
   <!-- elementary -->
   <section class="policy" id="ele-policy">
     <div class="subtitle">
-      <h2>指導方針</h2>
-      <p>正しい勉強のしかたを身につけ、<br class="sp-new-line">学ぶ楽しさを知る</p>
+      <h2 class="effect-fade">指導方針</h2>
+      <p class="effect-fade">正しい勉強のしかたを身につけ、<br class="sp-new-line">学ぶ楽しさを知る</p>
     </div>
 
     <div class="policy-items">
@@ -139,7 +139,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/elementary/hp/01_hp.png" alt="数字01">
           <img class="number-sp-img" src="../images/elementary/sp/01_blue_sp.png" alt="数字01">
-          <h3 class="policy-item-title">分かりやすく<br class="not-new-line">ていねいに教えます</h3>
+          <h3 class="policy-item-title effect-fade">分かりやすく<br class="not-new-line">ていねいに教えます</h3>
           <p class="policy-item-text">小学校で学ぶ内容は一生の知識のもととなる、とても重要なものばかりです。<br>
             塾では教科書に沿って分かりやすくていねいに教え、将来の勉強に必要な学力がしっかり身につくよう、責任を持ってご指導いたします。
           </p>
@@ -154,7 +154,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/elementary/hp/02_hp.png" alt="数字02">
           <img class="number-sp-img" src="../images/elementary/sp/02_blue_sp.png" alt="数字02">
-          <h3 class="policy-item-title">勉強の苦手をなくします</h3>
+          <h3 class="policy-item-title effect-fade">勉強の苦手をなくします</h3>
           <p class="policy-item-text">小学生の時期に苦手ができると、中学・高校へ行ってからたいへん苦労します。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、たくさんの問題の中から一人ひとりの弱点にあわせた対策問題を作成して苦手を克服します。
           </p>
@@ -169,7 +169,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/elementary/hp/03_hp.png" alt="数字03">
           <img class="number-sp-img" src="../images/elementary/sp/03_blue_sp.png" alt="数字03">
-          <h3 class="policy-item-title">基礎力を伸ばし、<br>がんばる力を育てます</h3>
+          <h3 class="policy-item-title effect-fade">基礎力を伸ばし、<br>がんばる力を育てます</h3>
           <p class="policy-item-text">基礎力がつくと、いろいろな問題が正確にかつ速く解けるようになります。
             塾では重要問題の反復学習に加えて、難易度の高い問題にも挑戦させ、粘り強く考える力を育てます。「分からない」が「分かる」ようになり、学ぶことが楽しくなるようにご指導します。
           </p>
@@ -185,8 +185,8 @@
 
   <section class="schedule" id="ele-schedule">
     <div class="subtitle">
-      <h2>時間割</h2>
-      <p>お好きな曜日に通えます</p>
+      <h2 class="effect-fade">時間割</h2>
+      <p class="effect-fade">お好きな曜日に通えます</p>
     </div>
 
     <div class="schedule-box-img">
@@ -239,8 +239,8 @@
 
   <section class="fee" id="ele-fee">
     <div class="subtitle">
-      <h2>料金</h2>
-      <p>ご兄弟割引、お得なキャンペーン</p>
+      <h2 class="effect-fade">料金</h2>
+      <p class="effect-fade">ご兄弟割引、お得なキャンペーン</p>
     </div>
 
     <div class="fee-list">
@@ -308,7 +308,7 @@
 
 
   <section class="campaign">
-    <div class="campaign-titles">
+    <div class="campaign-titles effect-fade">
       <img class="campaign-icon-pc" src="../images/elementary/hp/icon_balloon.png" alt="">
       <img class="campaign-icon-sp" src="../images/elementary/sp/icon_balloon.png" alt="">
       <h3 class="campaign-title">入会キャンペーン</h3>
