--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="">
       <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
 
-      <div class="access-menubar">
+      <div class="access-menubar effect-fade">
         <a href="elementary/index.html" class="menubar">
           <span>小学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <div class="home-juniorhischool">
+    <div class="home-juniorhischool effect-fade">
       <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="">
       <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
 
