--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -128,8 +128,8 @@
   <!-- elementary -->
   <section class="policy" id="juni-policy">
     <div class="subtitle">
-      <h2>指導方針</h2>
-      <p>効果的な勉強法を身につけ、<br class="sp-new-line">合格を確かなものにする</p>
+      <h2 class="effect-fade">指導方針</h2>
+      <p class="effect-fade">効果的な勉強法を身につけ、<br class="sp-new-line">合格を確かなものにする</p>
     </div>
 
     <div class="policy-items">
@@ -138,7 +138,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/juniorhighschool/hp/01_hp.png" alt="数字01">
           <img class="number-sp-img" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="数字01">
-          <h3 class="policy-item-title">万全の定期テスト・受験対策</h3>
+          <h3 class="policy-item-title effect-fade">万全の定期テスト・受験対策</h3>
           <p class="policy-item-text">中１・中２・中３とも、定期テスト時にはそれぞれの学校のテスト範囲にピッタリ合わせた予想問題を出題します。一人ひとりの弱点対策問題とあわせて、効率よくテスト勉強をすることができます。<br>
             また高校受験期になると、出題頻度・重要度の高い問題に焦点を絞って徹底した受験指導を行い、志望校合格のために万全を期します。
           </p>
@@ -153,7 +153,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/juniorhighschool/hp/02_hp.png" alt="数字02">
           <img class="number-sp-img" src="../images/juniorhighschool/sp/02_blue_sp.png" alt="数字02">
-          <h3 class="policy-item-title">基礎と応用の定着化</h3>
+          <h3 class="policy-item-title effect-fade">基礎と応用の定着化</h3>
           <p class="policy-item-text">過去の入試問題を詳細に分析し塾独自に開発した暗記シートやトレーニングシートを、授業に活用しています。<br>
             重要問題を反復して演習することにより、問題を速く正確に解く基礎力と、難易度の高い問題を粘り強く解く応用力を強化します。
           </p>
@@ -168,7 +168,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/juniorhighschool/hp/03_hp.png" alt="数字03">
           <img class="number-sp-img" src="../images/juniorhighschool/sp/03_blue_sp.png" alt="数字03">
-          <h3 class="policy-item-title">苦手の発見と克服</h3>
+          <h3 class="policy-item-title effect-fade">苦手の発見と克服</h3>
           <p class="policy-item-text">中学生の勉強は、どうしても自分の好きなところ、学習しやすいところに偏りがちです。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、およそ32万の問題から一人ひとりの弱点に合わせた対策問題を作成して苦手を克服します。
           </p>
@@ -184,8 +184,8 @@
   
   <section class="schedule" id="juni-schedule">
     <div class="subtitle">
-      <h2>時間割</h2>
-      <p>継続がチカラになる</p>
+      <h2 class="effect-fade">時間割</h2>
+      <p class="effect-fade">継続がチカラになる</p>
     </div>
 
     <div class="schedule-box-img junior-schedule-box-img">
@@ -237,8 +237,8 @@
 
   <section class="fee" id="juni-fee">
     <div class="subtitle">
-      <h2>料金</h2>
-      <p>ご兄弟割引、お得なキャンペーン</p>
+      <h2 class="effect-fade">料金</h2>
+      <p class="effect-fade">ご兄弟割引、お得なキャンペーン</p>
     </div>
 
     <div class="fee-list">
@@ -300,7 +300,7 @@
 
 
   <section class="campaign">
-    <div class="campaign-titles">
+    <div class="campaign-titles effect-fade">
       <img class="campaign-icon-pc" src="../images/juniorhighschool/hp/icon_balloon.png" alt="">
       <img class="campaign-icon-sp" src="../images/juniorhighschool/sp/icon_balloon.png" alt="">
       <h3 class="campaign-title">入会キャンペーン</h3>
