小中学生余白調整

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -251,19 +251,19 @@
         <p class="fee-menubar">授業料（税抜）</p>
         <div class="fee-subject">
           <dl>
-            <div class="subject-01">
+            <div class="subject-01 ele-fee-sub">
               <dt>１教科</dt>
               <dd>¥5,000</dd>
             </div>
-            <div class="subject-02">
+            <div class="subject-02 ele-fee-sub">
               <dt>２教科</dt>
               <dd>¥8,500</dd>
             </div>
-            <div class="subject-03">
+            <div class="subject-03 ele-fee-sub">
               <dt>３教科</dt>
               <dd>¥11,500</dd>
             </div>
-            <div class="subject-04">
+            <div class="subject-04 ele-fee-sub">
               <dt>４教科</dt>
               <dd>¥14,000</dd>
             </div>
