各ページタイトル

--- a/faq/index.html
+++ b/faq/index.html
@@ -120,7 +120,7 @@
     <div class="eyechatch-inner">
       <img class="eyechatch-pc-img" src="../images/faq/hp/mv_ringnote_hp.jpg" alt="">
       <img class="eyechatch-sp-img" src="../images/faq/sp/mv_ringnote_sp.jpg" alt="">
-      <h1 class="eyechatch-text">よくあるご質問</h1>
+      <h1 class="eyechatch-text faq">よくあるご質問</h1>
     </div>
   </section>
   <!-- /eyechatch -->
