--- a/about/index.html
+++ b/about/index.html
@@ -136,10 +136,10 @@
 
       <div class="feature-item">
         <div class="fe-item-content">
-          <img class="number-pc-img" src="../images/about/hp/01_hp.png" alt="">
-          <img class="number-sp-img" src="../images/about/sp/01_sp.png" alt="">
+          <img class="number-pc-img effect-fade" src="../images/about/hp/01_hp.png" alt="">
+          <img class="number-sp-img effect-fade" src="../images/about/sp/01_sp.png" alt="">
           <h3 class="fe-item-title effect-fade">生徒・塾・保護者 &nbsp;三位一体の体制</h3>
-          <p class="fe-item-text">生徒とのふれあいを重視し、何か分からないことがあるときには、どんな質問にもお答えするようにしています。授業以外においても、電話やメール、FAXにて、深夜0時まで質問を受け付けています。<br class="sp-new-line">また、保護者の方を交えた三者面談では、どうすれば成績を伸ばし志望校に合格することができるかを、家庭学習のしかたなども含めてしっかりご提案させていただきます。<br class="not-new-line sp-new-line">塾からは定期的に塾便りや学習カルテ、進学等に関する資料をお送りし、随時、生徒や保護者の方からの学習相談や進路相談もお受けして、三位一体となってお子さまの学力強化を図ります。
+          <p class="fe-item-text">生徒とのふれあいを重視し、何か分からないことがあるときには、どんな質問にもお答えするようにしています。授業以外においても、電話やメール、FAXにて、深夜0時まで質問を受け付けています。<br class="sp-new-line">また、保護者の方を交えた三者面談では、どうすれば成績を伸ばし志望校に合格することができるかを、家庭学習のしかたなども含めてしっかりご提案させていただきます。<br>塾からは定期的に塾便りや学習カルテ、進学等に関する資料をお送りし、随時、生徒や保護者の方からの学習相談や進路相談もお受けして、三位一体となってお子さまの学力強化を図ります。
           </p>
         </div>
         <div class="fe-item-img">
@@ -150,10 +150,10 @@
 
       <div class="feature-item">
         <div class="fe-item-content">
-          <img class="number-pc-img" src="../images/about/hp/02_hp.png" alt="">
-          <img class="number-sp-img" src="../images/about/sp/02_sp.png" alt="">
+          <img class="number-pc-img effect-fade" src="../images/about/hp/02_hp.png" alt="">
+          <img class="number-sp-img effect-fade" src="../images/about/sp/02_sp.png" alt="">
           <h3 class="fe-item-title effect-fade">最適な学習法の提供</h3>
-          <p class="fe-item-text">小・中学生にとって、正しい学習習慣と効率のよい勉強法を身につけることは、学力向上のために不可欠な条件です。<br class="not-new-line sp-new-line">塾では、独自に開発した各教科の「暗記シート」や「トレーニングシート」を活用して、基礎力と応用力を徹底的に強化します。<br class="sp-new-line">また、「DB（データベース）学習システム」を使用して生徒の学習データをコンピューターに蓄積し、一人ひとりの弱点問題を抽出・対策することで効率的に学力を伸ばします。
+          <p class="fe-item-text">小・中学生にとって、正しい学習習慣と効率のよい勉強法を身につけることは、学力向上のために不可欠な条件です。<br>塾では、独自に開発した各教科の「暗記シート」や「トレーニングシート」を活用して、基礎力と応用力を徹底的に強化します。<br class="sp-new-line">また、「DB（データベース）学習システム」を使用して生徒の学習データをコンピューターに蓄積し、一人ひとりの弱点問題を抽出・対策することで効率的に学力を伸ばします。
             <br class="not-new-line">さらに、過去数十年にわたって蓄積された受験データや入試問題を徹底的に分析、解明して、受験対策に万全を期しています。
           </p>
         </div>
@@ -165,11 +165,11 @@
 
       <div class="feature-item">
         <div class="fe-item-content">
-          <img class="number-pc-img" src="../images/about/hp/03_hp.png" alt="">
-          <img class="number-sp-img" src="../images/about/sp/03_sp.png" alt="">
+          <img class="number-pc-img effect-fade" src="../images/about/hp/03_hp.png" alt="">
+          <img class="number-sp-img effect-fade" src="../images/about/sp/03_sp.png" alt="">
           <h3 class="fe-item-title effect-fade">豊富な指導経験</h3>
           <p class="fe-item-text">1982年の開塾以来、地元八戸市でたくさんの小・中学生たちを指導してきました。<br class="sp-new-line">生徒の抱える苦手教科・苦手分野や志望校は多種多様であり、指導を通して塾の質も共に成長してまいりました。
-            <br class="not-new-line sp-new-line">これまで長い間塾で蓄積してきた、各教科の苦手分野に対するアプローチのしかたや、効率的で力のつく学習方法を、これからも未来の塾生たちに伝授し、「学力の充実」「志望校への合格」のお手伝いをさせていただきたいと思います。
+            <br>これまで長い間塾で蓄積してきた、各教科の苦手分野に対するアプローチのしかたや、効率的で力のつく学習方法を、これからも未来の塾生たちに伝授し、「学力の充実」「志望校への合格」のお手伝いをさせていただきたいと思います。
           </p>
         </div>
         <div class="fe-item-img">
@@ -191,13 +191,13 @@
       <img class="fe-item-sp-img" src="../images/about/sp/sky_sp.jpg" alt="">
     </div>
     <h3 class="greeting-title effect-fade">「お子さまの夢の実現に向けて<br>がんばる心を育てます。」</h3>
-    <p class="greeting-text">はじめまして。プリンス進学塾 塾長の松本です。<br class="not-new-line sp-new-line">当塾では、塾での勉強を通して、お子さまの夢を実現するための力を育てたいと考えております。
-      <br class="not-new-line sp-new-line">私は幼い頃に「分からない」ことについて「分かった」ときに感動を覚え、<br class="not-new-line">分からなくてもあきらめず、夢を実現するためがんばって勉強したことを思い出します。
-      <br class="not-new-line sp-new-line">お子さまは様々な夢をもっています。<br class="not-new-line">今はまだ具体的な夢として意識されていなくても、将来、人生の選択肢を広げるために、夢を実現する力は必ず必要になります。
-      <br class="not-new-line">現在、日本や外国で活躍している一流の人物に共通していることは、だれもが大きな夢を持っているということです。<br class="not-new-line sp-new-line">そして、どんなに苦しくても日々努力を続けていることも共通点の一つです。
-      <br class="not-new-line">夢の実現過程においては、小さな目標が連なって大きな夢の成就に向かって行きます。<br class="not-new-line sp-new-line">塾では勉強を通して、目標を設定する力と、その目標を達成するために苦しい環境でもがんばり抜く力を育てます。
+    <p class="greeting-text">はじめまして。プリンス進学塾 塾長の松本です。<br>当塾では、塾での勉強を通して、お子さまの夢を実現するための力を育てたいと考えております。
+      <br>私は幼い頃に「分からない」ことについて「分かった」ときに感動を覚え、<br class="not-new-line">分からなくてもあきらめず、夢を実現するためがんばって勉強したことを思い出します。
+      <br>お子さまは様々な夢をもっています。<br class="not-new-line">今はまだ具体的な夢として意識されていなくても、将来、人生の選択肢を広げるために、夢を実現する力は必ず必要になります。
+      <br class="not-new-line">現在、日本や外国で活躍している一流の人物に共通していることは、だれもが大きな夢を持っているということです。<br>そして、どんなに苦しくても日々努力を続けていることも共通点の一つです。
+      <br class="not-new-line">夢の実現過程においては、小さな目標が連なって大きな夢の成就に向かって行きます。<br>塾では勉強を通して、目標を設定する力と、その目標を達成するために苦しい環境でもがんばり抜く力を育てます。
     </p>
-    <div class="greeting-img_02 effect-fade">
+    <div class="greeting-img_02">
       <img class="fe-item-pc-img" src="../images/about/hp/about_girls_hp.jpg" alt="">
       <img class="fe-item-sp-img" src="../images/about/sp/about_girls_sp.jpg" alt="">
     </div>
