contact お問い合わせフォーム3つ

--- a/contact/index.html
+++ b/contact/index.html
@@ -143,7 +143,7 @@
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
         <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
-          <a href="./" class="menubar">
+          <a href="https://forms.gle/xmEyGJiRajPtnMdo7" class="menubar">
             <span>無料体験授業お申込フォーム</span>
           </a>
         </div>
@@ -167,7 +167,7 @@
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
         <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
-          <a href="./" class="menubar">
+          <a href="https://forms.gle/EWrU8XRtF4HRoiAcA" class="menubar">
             <span>資料請求お申込フォーム</span>
           </a>
         </div>
@@ -191,7 +191,7 @@
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
         <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
-          <a href="./" class="menubar">
+          <a href="https://forms.gle/JnLNwcG2noU912Fo9" class="menubar">
             <span>その他お問い合わせフォーム</span>
           </a>
         </div>
