中学生ページ01修正

--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -138,7 +138,7 @@
         <div class="policy-item-content">
           <img class="number-pc-img" src="../images/juniorhighschool/hp/01_hp.png" alt="数字01">
           <img class="number-sp-img" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="数字01">
-          <h3 class="policy-item-title effect-fade">万全の定期テスト・受験対策</h3>
+          <h3 class="policy-item-title effect-fade">万全の定期テストと受験対策</h3>
           <p class="policy-item-text">中１・中２・中３とも、定期テスト時にはそれぞれの学校のテスト範囲にピッタリ合わせた予想問題を出題します。一人ひとりの弱点対策問題とあわせて、効率よくテスト勉強をすることができます。<br>
             また高校受験期になると、出題頻度・重要度の高い問題に焦点を絞って徹底した受験指導を行い、志望校合格のために万全を期します。
           </p>
