プリンス進学塾について

--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@
         <div class="subtitle">
           <h2 class="effect-fade">プリンス進学塾について</h2>
         </div>
-        <p class="inquiry-text">小・中学生たちの夢をかなえるために、<br>
-          日常の勉強から受験勉強までを塾で指導し、<br>
-          これまでに1,000人以上の生徒たちを<br>
-          志望校に合格させてきました。<br>
-          長年の指導経験と実績には自信があります。
+        <p class="inquiry-text">八戸市二十三日町にある、<br>
+          小学生・中学生を対象とした小さな学習塾です。<br>
+          わかりやすく効果的な学習法を追究し、<br>
+          これまで1000人以上の生徒を志望校に合格させてきました。<br>
+          未来にはばたく子どもたちの夢の実現のために、<br>
+          教師も生徒も、共にがんばっています。
         </p>
         <div class="access-menubar">
           <a href="about/index.html#about-feature" class="menubar">
