--- a/about/index.html
+++ b/about/index.html
@@ -183,8 +183,8 @@
   <section class="greeting about" id="about-greeting">
     <div class="subtitle">
       <h2 class="effect-fade">塾長あいさつ</h2>
-      <p class="about-pc-text effect-fade">東京大学法学部 &nbsp;八戸高等学校 &nbsp;卒</p>
-      <p class="about-sp-text effect-fade">東京大学法学部<br>八戸高等学校卒</p>
+      <p class="about-pc-text effect-fade">松本 淳&nbsp;（東京大学／八戸高校&nbsp;卒）</p>
+      <p class="about-sp-text effect-fade">松本 淳<br>（東大／八高&nbsp;卒）</p>
     </div>
     <div class="greeting-img_01">
       <img class="fe-item-pc-img" src="../images/about/hp/sky_hp.jpg" alt="">
