--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <a href="index.html"><img class=header-logo src="images/common/hp/header_logo_hp.png" alt=""></a>
     <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt=""></a>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="images/common/hp/favicon.ico">
+
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
       <ul class="hamburger-nav">
