--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt=""></a>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/common/hp/favicon.ico"/>
+    <link rel="shortcut icon" href="images/common/hp/favicon.ico">
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
