--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
+<link rel="shortcut icon" href="images/common/hp/favicon.ico">
 </head>
 <body>
 
