--- a/elementary/index.html
+++ b/elementary/index.html
@@ -19,6 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
+<link rel="shortcut icon" href="images/common/hp/favicon.ico">
 </head>
 <body>
 
