--- a/about/index.html
+++ b/about/index.html
@@ -19,11 +19,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
-<link rel="shortcut icon" href="images/common/hp/favicon.ico">
+<link rel="shortcut icon" href="../images/common/hp/favicon.ico">
 </head>
 <body>
 
-<!-- header -->
+<!-- header -->../
 <header class="header">
   <div class="header-icons">
     <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
